--- a/index.html
+++ b/index.html
@@ -64,12 +64,71 @@
         </div>
       </section>
       <section>
-        <div class="content2">
-          <div class="img2"></div>
-          <div class="text"></div>
+        <div class="container">
+          <div class="cnt">
+            <div class="img2">
+              <img src="old-man-1775239_640.jpg" alt="Image" class="image" />
+            </div>
+            <div class="text">
+              <h2>Together,</h2>
+              <p>
+                let's turn compassion into action and dreams into reality<br />
+                through your generous donation
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="cnt2">
+            <div class="text2">
+              <h2>The</h2>
+              <p>
+                impact of your donation extends far beyond the act itself,<br />
+                sparking hope and inspiring others to give.
+              </p>
+            </div>
+            <div class="img3">
+              <img src="112.jpg" alt="Image" class="image" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container2">
+        <div class="footercontent">
+          <h3>Contact Us</h3>
+          <p>Email:Resucebridge24@gmail.com</p>
+          <p>Phone:9811250953,7683078170</p>
+          <p>Address: --Abesit</p>
+        </div>
+        <div class="footercontent">
+          <h3>Quick links</h3>
+          <ul class="list">
+            <li><a href="">Home</a></li>
+            <li><a href="">About-us</a></li>
+            <li><a href="">Contact-us</a></li>
+            <li><a href="">Donate Now</a></li>
+          </ul>
+        </div>
+        <div class="footercontent">
+          <h3>Support-us</h3>
+          <ul class="social-icons">
+            <li>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li><a href="#"></a><i class="fa-brands fa-instagram"></i></li>
+            <li><a href="#"></a><i class="fa-solid fa-envelope"></i></li>
+            <li><a href="#"></a><i class="fa-solid fa-phone"></i></li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottombar">
+        <p>&copy;2024 RescueBridge -Inovation Avengers.All rights reserved</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
