--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <a href="#" target="_blank" class="active">Home</a>
           </li>
           <li>
-            <a href="#" target="_blank">About-us</a>
+            <a href="aboutus.html" >About-us</a>
           </li>
           <li>
             <a href="#" target="_blank">Contact</a>
           </li>
           <li>
-            <a href="#" target="_blank">Donate Now</a>
+            <a href="login.html" target="_blank">Donate Now</a>
           </li>
         </ul>
       </nav>
@@ -57,7 +57,7 @@
             <p>get hand in hand to make world a better place.</p>
           </div>
           <div class="btn3">
-            <a href="#" target="_blank"
+            <a href="login.html" target="_blank"
               >Donate Now <i class="fa-solid fa-arrow-right"></i
             ></a>
           </div>
